# gnome-pilot-conduits

./: Makefile  README.md
src/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  conduit.mk  config.h.in  configure  configure.in  gnome-pilot-conduits.spec  gnome-pilot-conduits.spec.in
src/email/: ChangeLog  Makefile.am  Makefile.in  email_conduit.c  email_conduit.h  parsedate.c  parsedate.y  sendmail.conduit.in
src/expense/: ChangeLog  Makefile.am  Makefile.in  expense.conduit.in  expense_conduit.c  expense_conduit.h
src/mal-conduit/: COPYING  ChangeLog  Makefile.am  Makefile.in
src/mal-conduit/mal/: Makefile.am  Makefile.in
src/mal-conduit/mal/client/: Makefile.am  Makefile.in
src/mal-conduit/mal/client/common/: AGMobileLinkSettings.h  AGProxyDebug.h  AGTimeoutMessageBox.h  Makefile.am  Makefile.in
src/mal-conduit/mal/client/unix/: MAL31DBConfig.c  Makefile.am  Makefile.in  README_malsync  malsync.c  malsync.h
src/mal-conduit/mal/common/: AGBase64.c  AGBufferWriter.c  AGDBConfig.c  AGDesktopInfoPalm.h  AGDigest.c  AGMD5.c  AGNet.c  AGNet.h  AGServerConfig.c  AGSynchronize.c  AGUtilUnix.c  Makefile.am  Makefile.in
src/mal-conduit/src/: Makefile.am  Makefile.in  mal-conduit.c  mal-conduit.h  mal.conduit.in
src/memo_file/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  TODO  memo_file_conduit.c  memo_file_conduit.h  memofile.conduit.in
src/po/: ChangeLog  POTFILES.in  ar.gmo  ar.po  az.gmo  az.po  be.gmo  be.po  bg.gmo  bg.po  ca.gmo  ca.po  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  dz.gmo  dz.po  el.gmo  el.po  en_CA.gmo  en_CA.po  en_GB.gmo  en_GB.po  es.gmo  es.po  fi.gmo  fi.po  fr.gmo  fr.po  gl.gmo  gl.po  gnome-pilot-conduits.pot  he.gmo  he.po  hr.gmo  hr.po  hu.gmo  (+61 more)
src/time/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  time-conduit.c  time-conduit.h  time.conduit.in
